@@ -13,14 +13,14 @@ EBUILD lft-2.5.ebuild 790 RMD160 61797416b59b02a2d3975367f7b54f6fe695b945 SHA1 a
 MD5 148ab228467f3f669f51a372ae8c874c lft-2.5.ebuild 790
 RMD160 61797416b59b02a2d3975367f7b54f6fe695b945 lft-2.5.ebuild 790
 SHA256 fb6639e0aa296c3d2a99383bd7ae94feb8d356d630e8a5a61421f37da5d557fd lft-2.5.ebuild 790
-EBUILD lft-3.0b.ebuild 719 RMD160 76ea3951de5df9ac7701581e4943c78b51c42ebd SHA1 5e84762e981b75e7e18ac9e42c833e88a9faed97 SHA256 576b4c3bc4abe08cf7d2ca33be1f00d17ca7dd6b5bb2adb17685b4c04c913277
-MD5 4443114880ff13f8187c20b1a89264a9 lft-3.0b.ebuild 719
-RMD160 76ea3951de5df9ac7701581e4943c78b51c42ebd lft-3.0b.ebuild 719
-SHA256 576b4c3bc4abe08cf7d2ca33be1f00d17ca7dd6b5bb2adb17685b4c04c913277 lft-3.0b.ebuild 719
-MISC ChangeLog 2223 RMD160 0ae09f5d562f1dac097fae91b99d563a73dbdb09 SHA1 5c1d474c6df8a9cf1cd4ad9611110efb344002b7 SHA256 64866d1a4c2f0a26f46f6d24e1983b9134f03b65904abf77afded35383660b8f
-MD5 fcd80677a235e3ec29159ca4bb78f018 ChangeLog 2223
-RMD160 0ae09f5d562f1dac097fae91b99d563a73dbdb09 ChangeLog 2223
-SHA256 64866d1a4c2f0a26f46f6d24e1983b9134f03b65904abf77afded35383660b8f ChangeLog 2223
+EBUILD lft-3.0_beta.ebuild 768 RMD160 4579b81e8608487502e16dcecbf6be8ff04b9770 SHA1 b394a25f1acefe38430805da6b89bd482175061a SHA256 594b540a0f6d876189a9e6a94d12a8f9fd2d07a53596b88a2e01a61f718f818e
+MD5 4a7822a6035b5faaf5c7eb57846b216e lft-3.0_beta.ebuild 768
+RMD160 4579b81e8608487502e16dcecbf6be8ff04b9770 lft-3.0_beta.ebuild 768
+SHA256 594b540a0f6d876189a9e6a94d12a8f9fd2d07a53596b88a2e01a61f718f818e lft-3.0_beta.ebuild 768
+MISC ChangeLog 2364 RMD160 2fd29f8202211bae86371e662f2233a5c9b6bba9 SHA1 5a1732066e96e7f46e3713869871bab6ac6c3441 SHA256 4d5b7033c9b0c7c651fd77b8d96d60f3aca91775634152d77f3cee0841e6f825
+MD5 1cf83e1e7694a9b63d61266b47d97024 ChangeLog 2364
+RMD160 2fd29f8202211bae86371e662f2233a5c9b6bba9 ChangeLog 2364
+SHA256 4d5b7033c9b0c7c651fd77b8d96d60f3aca91775634152d77f3cee0841e6f825 ChangeLog 2364
 MISC metadata.xml 255 RMD160 6b6220c504841651605052763e7b916a3e0c2564 SHA1 aff7143c9f2ff65ad359b26f1b00fcbbfdc84d0f SHA256 f8bbe74ab4066ee9b8578ae3befe87ff885e8e855e583da8da26459414672b56
 MD5 bb22173a418c973dd61905d5cbf16cf6 metadata.xml 255
 RMD160 6b6220c504841651605052763e7b916a3e0c2564 metadata.xml 255
@@ -31,6 +31,6 @@ SHA256 d3761574ea5a93775373830c085e1b8fe2981d7aab97145367a7be9a8886b849 files/di
 MD5 0713f9233a7c14d7e72c29819da8b44c files/digest-lft-2.5 223
 RMD160 81a8e2a1600e57e2414478acb85c0a1d23dea58d files/digest-lft-2.5 223
 SHA256 d56fc153f31ee4d15defc7e27b8aa2b90b1405149c253b864fbdf5c203080789 files/digest-lft-2.5 223
-MD5 b3b59740bb97c2e93a1221b9c9cc6710 files/digest-lft-3.0b 226
-RMD160 10a5a5233f6f394b99f6e56b9caee98ee4f660c2 files/digest-lft-3.0b 226
-SHA256 21ddc8645aa15a31a40b3bac57ce6a98ec0a852b84bd11755cdbf312316aafc6 files/digest-lft-3.0b 226
+MD5 b3b59740bb97c2e93a1221b9c9cc6710 files/digest-lft-3.0_beta 226
+RMD160 10a5a5233f6f394b99f6e56b9caee98ee4f660c2 files/digest-lft-3.0_beta 226
+SHA256 21ddc8645aa15a31a40b3bac57ce6a98ec0a852b84bd11755cdbf312316aafc6 files/digest-lft-3.0_beta 226
